2003-07-08  Marcus Lundblad  <ml@update.uu.se>

	* libs/FBidi.h:
	fixed FBidi.h macro to work with no FriBIDI
	
2003-07-08  Marcus Lundblad  <ml@update.uu.se>

	* libs/CombineChars.h (CombineChars):
	* libs/CombineChars.c (CombineChars):
	* libs/FBidi.h (FBidiConvert):
	* libs/FBidi.c (FBidiConvert):
	* libs/Flocale.c (FlocaleEncodeString):
	(FlocaleEncodeWinString):
	(FlocaleDrawUnderline):
	(FlocaleTextWidth):
	fixed drawing of underlines on characters to work in with BIDI
	and combining characters
	
2003-07-08  Mikhael Goikhman  <migo@homemail.com>

	* todo-2.6:
	closed D.1 with "no consensus" resolution

2003-07-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	documented tear off menus

	* fvwm/placement.c (PlaceWindow):
	StartsOnPage + SkipMapping overrides PPosition

2003-07-07  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/functable.c:
	solved a problem with CMD_Dummy and exact command spelling

	* libs/CombineChars.c:
	* libs/CombineChars.h:
	* libs/FBidi.c:
	minor reformattings (use TABs not 8 spaces and a space after keywords
	like for, if or while)

2003-07-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (apply_window_updates):
	* fvwm/update.h:
	* fvwm/add_window.c (setup_style_and_decor):
	* fvwm/style.h:
	* fvwm/style.c (style_parse_one_style_option):
	(check_window_style_change):
	new style MoveWindowByProgramMethod

	* libs/PictureImageLoader.c (PImageLoadXpm):
	use RETSIGTYPE and SIGNAL_RETURN for all signal handlers

	* fvwm/ewmh_events.c (ewmh_WMStateFullScreen):
	implemented _NET_WM_STATE_FULLSCREEN handling

	* fvwm/move_resize.c (GetOnePositionArgument):
	fixed parsing of "+-x +-y" Move arguments
	(CMD_Maximize):
	use get_page_offset_check_visible

	* fvwm/geometry.c (get_page_offset_check_visible):
	new convenience function

	* fvwm/events.c (__handle_cr_on_client):
	fixed handling of gravities other than NW or Static
	(__cr_detect_icccm_move):
	fixed several bugs

2003-07-06  Marcus Lundblad  <ml@update.uu.se>
